start counting of indexings

--- a/generate_final_test_desc/generate_tests.ipynb
+++ b/generate_final_test_desc/generate_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        " 'TextNormalize']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,10 +109,10 @@
     "\n",
     "WordCountingChunkingAlgorithm = [\n",
     "    {\n",
-    "        'word_amount': wa,\n",
-    "        'overlay': o\n",
+    "        'words_amount': wa,\n",
+    "        'overlap': o\n",
     "    }\n",
-    "    for wa, o in product(word_amount, overlay)\n",
+    "    for wa, o in product(word_amount, overlay) \n",
     "]"
    ]
   },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,8 +134,8 @@
     "\n",
     "SentenceChunkingAlgorithm = [\n",
     "    {\n",
-    "        'sentence_amount': sa,\n",
-    "        'overlay': o\n",
+    "        'sentences_in_chunk': sa,\n",
+    "        'overlap': o\n",
     "    }\n",
     "    for sa, o in product(sentence_amount, overlay)\n",
     "]"
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,28 +166,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ['BAAI/LLM-Embedder', 'SFR-Embedding-Mistral', 'mxbai-embed-large-v1', 'Alibaba-NLP/gte-large-en-v1.5']\n",
-    "\n",
+    "# model = [\"BAAI/bge-m3\", 'SFR-Embedding-Mistral', 'mxbai-embed-large-v1']\n",
+    "model = ['intfloat/e5-small-v2', \"BAAI/bge-m3\", 'thenlper/gte-base', 'DeepPavlov/rubert-base-cased-sentence']\n",
     "HuggingFaceEmbedder = [{'model': i} for i in model]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Embedder = [{\n",
-    "    'method': 'BoWEmbedder',\n",
-    "    'params': None}] +[{\n",
-    "        \n",
-    "    'method': 'TfidfEmbedder',\n",
-    "    'params': None}] + [{\n",
-    "        \n",
+    "Embedder = [{     \n",
     "    'method': varname(HuggingFaceEmbedder),\n",
     "    'params': i\n",
     "    } for i in HuggingFaceEmbedder]\n",
@@ -203,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,65 +239,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = [{\n",
+    "test_combinations = [{\n",
     "    # varname(ChunkStorage): i[0],\n",
     "    varname(ChunkingAlgorithm): i[0],\n",
     "    varname(Embedder): i[1],\n",
-    "    varname(FAISS_Vector): i[2],\n",
+    "    # varname(FAISS_Vector): i[2],\n",
     "    # varname(LLM): i[3]\n",
     "}\n",
-    "for i in product( ChunkingAlgorithm, Embedder, FAISS_Vector)]"
+    "for i in product( ChunkingAlgorithm, Embedder)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'ChunkingAlgorithm': {'method': 'WordCountingChunkingAlgorithm',\n",
-       "  'params': {'word_amount': 128, 'overlay': 0.1}},\n",
-       " 'Embedder': {'method': 'BoWEmbedder', 'params': None},\n",
-       " 'FAISS_Vector': {'method': 'FaissIndexFlatL2', 'params': None}}"
+       "120"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a[0]"
+    "len(test_combinations)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'str' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[35], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m chunking_cls \u001b[38;5;241m=\u001b[39m a[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mChunkingAlgorithm\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmethod\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m----> 2\u001b[0m \u001b[43mchunking_cls\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43ma\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mChunkingAlgorithm\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mparams\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'str' object is not callable"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open('test_combinations.json', 'w', encoding='utf-8') as file:\n",
+    "    file.write(json.dumps(test_combinations, indent=4))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,18 +296,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute '__qualname__'",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pydantic'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[33], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmirage\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01minspect\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(\u001b[43mWordCountingChunkingAlgorithm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;18;43m__qualname__\u001b[39;49m))\n\u001b[0;32m      5\u001b[0m class_translator: \u001b[38;5;28mdict\u001b[39m[\u001b[38;5;28mstr\u001b[39m, \u001b[38;5;28mtype\u001b[39m] \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m      6\u001b[0m     name : \u001b[38;5;28mcls\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m name, \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01min\u001b[39;00m inspect\u001b[38;5;241m.\u001b[39mgetmembers(\n\u001b[0;32m      7\u001b[0m         sys\u001b[38;5;241m.\u001b[39mmodules[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmirage\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      8\u001b[0m     ) \u001b[38;5;28;01mif\u001b[39;00m inspect\u001b[38;5;241m.\u001b[39misclass(\u001b[38;5;28mcls\u001b[39m)\n\u001b[0;32m      9\u001b[0m }\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute '__qualname__'"
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmirage\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01minspect\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(WordCountingChunkingAlgorithm\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__qualname__\u001b[39m))\n",
+      "File \u001b[1;32mc:\\Users\\evgen\\Desktop\\MIRAGE\\generate_final_test_desc\\..\\mirage\\__init__.py:1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mindex\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01membedders\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01minference\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
+      "File \u001b[1;32mc:\\Users\\evgen\\Desktop\\MIRAGE\\generate_final_test_desc\\..\\mirage\\index\\__init__.py:2\u001b[0m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mchunk_storages\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mraw_storages\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mchunking_algorithms\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
+      "File \u001b[1;32mc:\\Users\\evgen\\Desktop\\MIRAGE\\generate_final_test_desc\\..\\mirage\\index\\chunk_storages\\__init__.py:1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mChunkStorage\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ChunkStorage\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mWhooshChunkStorage\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m WhooshChunkStorage\n",
+      "File \u001b[1;32mc:\\Users\\evgen\\Desktop\\MIRAGE\\generate_final_test_desc\\..\\mirage\\index\\chunk_storages\\ChunkStorage.py:4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Callable, Generator, List, Literal\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpydantic\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BaseModel\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmirage\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mindex\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m QueryResult\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mChunkNote\u001b[39;00m(BaseModel):\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pydantic'"
      ]
     }
    ],
@@ -423,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -768,48 +755,11 @@
     "        sys.modules['mirage']\n",
     "    )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Mirage(\n",
-    "    index = MirageIndex(\n",
-    "        \n",
-    "    ),\n",
-    "    inference = MirageInference(\n",
-    "\n",
-    "    ),\n",
-    "    emebdder = MirageEmbedder(\n",
-    "\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2025-04-26 19:00:35.502\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m3\u001b[0m - \u001b[31m\u001b[1mошибка нахуй\u001b[0m\n",
-      "\u001b[31m\u001b[1mNoneType\u001b[0m:\u001b[1m None\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "from loguru import logger"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -823,7 +773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
