Added 2 benches and scripts for them

--- a/experiments/test_cuad.ipynb
+++ b/experiments/test_cuad.ipynb
@@ -2,177 +2,149 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\Desktop\\Диплом\\MIRAGE\\env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os \n",
+    "import numpy as np\n",
+    "from datasets import load_dataset\n",
+    "import shutil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datasets import load_dataset\n",
-    "\n",
     "ds = load_dataset(\"rungalileo/ragbench\", \"cuad\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "ids_train = []\n",
     "for i in range(len(ds['train'])):\n",
-    "    ids_train.append(ds['train'][i]['id'])\n",
-    "    \n",
-    "ids_test = []\n",
-    "for i in range(len(ds['test'])):\n",
-    "    ids_test.append(ds['train'][i]['id'])"
+    "    ids_train.append(ds['train'][i]['id'].split('__')[0])\n",
+    "ids_train = set(list(ids_train))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ids_train_clear = list(set([i.split('__')[0] for i in ids_train]))\n",
-    "ids_test_clear = list(set([i.split('__')[0] for i in ids_test]))"
+    "ar = []\n",
+    "for op in [f'cuad_full/{i}' for i in os.listdir('cuad_full')]:\n",
+    "    with open(op, 'r') as f:\n",
+    "        if op.split('/')[1][:-4] in ids_train:\n",
+    "            try:\n",
+    "                ar.append([op, f.read().count(' ')])\n",
+    "            except:\n",
+    "                pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_doc = list(set(ids_test_clear) & set(ids_train_clear))[0:20]"
+    "ar2 = []\n",
+    "for op in [f'../data_txt/{i}' for i in os.listdir('../data_txt')]:\n",
+    "    with open(op, 'r') as f:\n",
+    "        try:\n",
+    "            ar2.append([op, f.read().count(' ')])\n",
+    "        except:\n",
+    "            pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_train = [i for i in ids_train if i.split('__')[0] in total_doc]\n",
-    "selected_test = [i for i in ids_test if i.split('__')[0] in total_doc]"
+    "len_arr = [i[1] for i in sorted(ar2, key=lambda x: x[1])]\n",
+    "doc_len = [i[1] for i in sorted(ar, key=lambda x: x[1])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'CHANGEPOINTCORP_03_08_2000-EX-10.6-LICENSE AND HOSTING AGREEMENT__Source Code Escrow'"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "selected_train[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Is one party required to deposit its source code into escrow with a third party, which can be released to the counterparty upon the occurrence of certain events (bankruptcy,\\xa0 insolvency, etc.)?'"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ds['train'][9]['question']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The response is well supported by the documents as it effectively summarizes and directly refers to Section 12 of Document 0 which provides details about the escrow arrangement between Changepoint and Corio, conditions under which the source code may be released, and post-release terms. Specific details regarding the timing for signing the escrow agreement, the terms within the agreement, and the conditions for release and usage of the source code upon release are well-explained and backed by the source documents.'"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ds['train'][9]['overall_supported_explanation']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'CHANGEPOINTCORP_03_08_2000-EX-10.6-LICENSE AND HOSTING AGREEMENT__Source Code Escrow'"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ds['train'][9]['id']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "138"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(selected_test) + len(selected_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import shutil\n",
-    "import os"
+    "docs = np.array(doc_len)\n",
+    "cuad_index = []\n",
+    "for i in len_arr:\n",
+    "    cuad_index.append((np.abs(docs - i)).argmin())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in total_doc:\n",
+    "final = [ar[i][0].split('/')[1][:-4] for i in range(len(ar)) if i in cuad_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in final:\n",
     "    shutil.copy(os.path.join('cuad_full', f'{i}.txt'), os.path.join('cuad_cut', f'{i}.txt'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = []\n",
+    "for i in range(len(ds['train'])):\n",
+    "    o = ds['train'][i]['id'].split('__')[0]\n",
+    "    if o in final:\n",
+    "        a.append(ds['train'][i]['id'].split('__')[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(a)"
    ]
   },
   {
