--- a/generate_indexes.ipynb
+++ b/generate_indexes.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "b21d670c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "cc85c287",
    "metadata": {},
    "outputs": [],
@@ -27,48 +36,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "fc40f8e9",
+   "execution_count": 27,
+   "id": "195ddd9f",
    "metadata": {},
    "outputs": [],
    "source": [
     "combinations = [i for i in combinations if\n",
-    "  i['Embedder']['params']['model'] == 'BAAI/bge-m3' and\n",
-    "    i['ChunkingAlgorithm']['params']['overlap'] in [0.1, 0.25] and\n",
-    "    i['ChunkingAlgorithm']['method'] == 'SentenceChunkingAlgorithm' and\n",
-    "    i['ChunkingAlgorithm']['params']['sentences_in_chunk'] in [8, 16]]"
+    "  i['Embedder']['params']['model'] == 'intfloat/e5-small-v2' and\n",
+    "    i['ChunkingAlgorithm']['params']['overlap'] in [0.1] and\n",
+    "    i['ChunkingAlgorithm']['method'] == 'WordCountingChunkingAlgorithm' and\n",
+    "    i['ChunkingAlgorithm']['params']['words_amount'] in [128]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "id": "8d1ecbc4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "combinations = combinations[1:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "a7cd5569",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'ChunkingAlgorithm': {'method': 'SentenceChunkingAlgorithm',\n",
-       "   'params': {'sentences_in_chunk': 8, 'overlap': 0.25}},\n",
+       "[{'ChunkingAlgorithm': {'method': 'WordCountingChunkingAlgorithm',\n",
+       "   'params': {'words_amount': 128, 'overlap': 0.1}},\n",
        "  'Embedder': {'method': 'HuggingFaceEmbedder',\n",
-       "   'params': {'model': 'BAAI/bge-m3'}}},\n",
-       " {'ChunkingAlgorithm': {'method': 'SentenceChunkingAlgorithm',\n",
-       "   'params': {'sentences_in_chunk': 16, 'overlap': 0.1}},\n",
-       "  'Embedder': {'method': 'HuggingFaceEmbedder',\n",
-       "   'params': {'model': 'BAAI/bge-m3'}}}]"
+       "   'params': {'model': 'intfloat/e5-small-v2'}}}]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,18 +74,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "460b79ad",
    "metadata": {},
    "outputs": [],
    "source": [
     "START_COMBINATION = 0\n",
-    "END_COMBINATION = 2"
+    "END_COMBINATION = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "id": "9ceba26a",
    "metadata": {},
    "outputs": [
@@ -98,22 +93,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-05-01 16:44:40.033\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mgenerate_index\u001b[0m:\u001b[36m32\u001b[0m - \u001b[1m{'ChunkingAlgorithm': {'method': 'SentenceChunkingAlgorithm', 'params': {'sentences_in_chunk': 8, 'overlap': 0.25}}, 'Embedder': {'method': 'HuggingFaceEmbedder', 'params': {'model': 'BAAI/bge-m3'}}}\u001b[0m\n",
-      "\u001b[32m2025-05-01 16:45:29.829\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.embedders.Embedder\u001b[0m:\u001b[36mconvert_chunks_to_vector_index\u001b[0m:\u001b[36m147\u001b[0m - \u001b[1mConverting ChunkStorage to VectorIndex\u001b[0m\n",
-      "100%|██████████| 1299/1299 [20:18<00:00,  1.07it/s] \n",
-      "\u001b[32m2025-05-01 17:05:48.280\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mgenerate_index\u001b[0m:\u001b[36m54\u001b[0m - \u001b[1mCopy of index time: 0.2829291820526123s.\u001b[0m\n",
-      "\u001b[32m2025-05-01 17:05:48.280\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.MirageIndex\u001b[0m:\u001b[36msave\u001b[0m:\u001b[36m32\u001b[0m - \u001b[1mSaving Mirage index to indexes\\S_8_0.25_BAAI_l2.mirage_index...\u001b[0m\n",
-      "\u001b[32m2025-05-01 17:05:53.951\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.MirageIndex\u001b[0m:\u001b[36msave\u001b[0m:\u001b[36m78\u001b[0m - \u001b[1mMirage index saved to indexes\\S_8_0.25_BAAI_l2.mirage_index.\u001b[0m\n",
-      "\u001b[32m2025-05-01 17:05:53.952\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.MirageIndex\u001b[0m:\u001b[36msave\u001b[0m:\u001b[36m32\u001b[0m - \u001b[1mSaving Mirage index to indexes\\S_8_0.25_BAAI_ip.mirage_index...\u001b[0m\n",
-      "\u001b[32m2025-05-01 17:05:59.623\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.MirageIndex\u001b[0m:\u001b[36msave\u001b[0m:\u001b[36m78\u001b[0m - \u001b[1mMirage index saved to indexes\\S_8_0.25_BAAI_ip.mirage_index.\u001b[0m\n",
-      "\u001b[32m2025-05-01 17:05:59.649\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mgenerate_index\u001b[0m:\u001b[36m32\u001b[0m - \u001b[1m{'ChunkingAlgorithm': {'method': 'SentenceChunkingAlgorithm', 'params': {'sentences_in_chunk': 16, 'overlap': 0.1}}, 'Embedder': {'method': 'HuggingFaceEmbedder', 'params': {'model': 'BAAI/bge-m3'}}}\u001b[0m\n",
-      "\u001b[32m2025-05-01 17:06:37.245\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.embedders.Embedder\u001b[0m:\u001b[36mconvert_chunks_to_vector_index\u001b[0m:\u001b[36m147\u001b[0m - \u001b[1mConverting ChunkStorage to VectorIndex\u001b[0m\n",
-      "100%|██████████| 526/526 [17:59<00:00,  2.05s/it]\n",
-      "\u001b[32m2025-05-01 17:24:36.555\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mgenerate_index\u001b[0m:\u001b[36m54\u001b[0m - \u001b[1mCopy of index time: 0.10196137428283691s.\u001b[0m\n",
-      "\u001b[32m2025-05-01 17:24:36.556\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.MirageIndex\u001b[0m:\u001b[36msave\u001b[0m:\u001b[36m32\u001b[0m - \u001b[1mSaving Mirage index to indexes\\S_16_0.1_BAAI_l2.mirage_index...\u001b[0m\n",
-      "\u001b[32m2025-05-01 17:24:40.140\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.MirageIndex\u001b[0m:\u001b[36msave\u001b[0m:\u001b[36m78\u001b[0m - \u001b[1mMirage index saved to indexes\\S_16_0.1_BAAI_l2.mirage_index.\u001b[0m\n",
-      "\u001b[32m2025-05-01 17:24:40.146\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.MirageIndex\u001b[0m:\u001b[36msave\u001b[0m:\u001b[36m32\u001b[0m - \u001b[1mSaving Mirage index to indexes\\S_16_0.1_BAAI_ip.mirage_index...\u001b[0m\n",
-      "\u001b[32m2025-05-01 17:24:43.474\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.MirageIndex\u001b[0m:\u001b[36msave\u001b[0m:\u001b[36m78\u001b[0m - \u001b[1mMirage index saved to indexes\\S_16_0.1_BAAI_ip.mirage_index.\u001b[0m\n"
+      "\u001b[32m2025-05-01 17:46:19.382\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mgenerate_index\u001b[0m:\u001b[36m32\u001b[0m - \u001b[1m{'ChunkingAlgorithm': {'method': 'WordCountingChunkingAlgorithm', 'params': {'words_amount': 128, 'overlap': 0.1}}, 'Embedder': {'method': 'HuggingFaceEmbedder', 'params': {'model': 'intfloat/e5-small-v2'}}}\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:46:22.376\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.chunking_algorithms.WordCountingChunkingAlgorithm\u001b[0m:\u001b[36mchunk_a_document\u001b[0m:\u001b[36m28\u001b[0m - \u001b[1mReading a document... Приказ Росавиации от 28.12.2022 N 970-П  Об утверждении Норм.txt\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:46:28.950\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.chunking_algorithms.WordCountingChunkingAlgorithm\u001b[0m:\u001b[36mchunk_a_document\u001b[0m:\u001b[36m28\u001b[0m - \u001b[1mReading a document... Приказ_Минтранса_РФ_от_21_11_2005_N_139_ред_от_17_09_2010.rtf.txt\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:46:29.790\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.chunking_algorithms.WordCountingChunkingAlgorithm\u001b[0m:\u001b[36mchunk_a_document\u001b[0m:\u001b[36m28\u001b[0m - \u001b[1mReading a document... ФАП-10.txt\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:46:32.759\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.chunking_algorithms.WordCountingChunkingAlgorithm\u001b[0m:\u001b[36mchunk_a_document\u001b[0m:\u001b[36m28\u001b[0m - \u001b[1mReading a document... ФАП-109.txt\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:46:33.412\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.chunking_algorithms.WordCountingChunkingAlgorithm\u001b[0m:\u001b[36mchunk_a_document\u001b[0m:\u001b[36m28\u001b[0m - \u001b[1mReading a document... ФАП-128.txt\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:46:40.167\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.chunking_algorithms.WordCountingChunkingAlgorithm\u001b[0m:\u001b[36mchunk_a_document\u001b[0m:\u001b[36m28\u001b[0m - \u001b[1mReading a document... ФАП-138.txt\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:46:42.109\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.chunking_algorithms.WordCountingChunkingAlgorithm\u001b[0m:\u001b[36mchunk_a_document\u001b[0m:\u001b[36m28\u001b[0m - \u001b[1mReading a document... ФАП-139.txt\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:46:42.987\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.chunking_algorithms.WordCountingChunkingAlgorithm\u001b[0m:\u001b[36mchunk_a_document\u001b[0m:\u001b[36m28\u001b[0m - \u001b[1mReading a document... ФАП-141.txt\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:46:43.790\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.chunking_algorithms.WordCountingChunkingAlgorithm\u001b[0m:\u001b[36mchunk_a_document\u001b[0m:\u001b[36m28\u001b[0m - \u001b[1mReading a document... ФАП-147 АОН.txt\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:46:44.298\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.chunking_algorithms.WordCountingChunkingAlgorithm\u001b[0m:\u001b[36mchunk_a_document\u001b[0m:\u001b[36m28\u001b[0m - \u001b[1mReading a document... ФАП-147.txt\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:46:48.037\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.chunking_algorithms.WordCountingChunkingAlgorithm\u001b[0m:\u001b[36mchunk_a_document\u001b[0m:\u001b[36m28\u001b[0m - \u001b[1mReading a document... ФАП-273.txt\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:46:49.317\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.chunking_algorithms.WordCountingChunkingAlgorithm\u001b[0m:\u001b[36mchunk_a_document\u001b[0m:\u001b[36m28\u001b[0m - \u001b[1mReading a document... ФАП-29.txt\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:46:49.511\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.chunking_algorithms.WordCountingChunkingAlgorithm\u001b[0m:\u001b[36mchunk_a_document\u001b[0m:\u001b[36m28\u001b[0m - \u001b[1mReading a document... ФАП-293.txt\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:46:57.556\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.chunking_algorithms.WordCountingChunkingAlgorithm\u001b[0m:\u001b[36mchunk_a_document\u001b[0m:\u001b[36m28\u001b[0m - \u001b[1mReading a document... ФАП-32.txt\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:46:59.009\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.chunking_algorithms.WordCountingChunkingAlgorithm\u001b[0m:\u001b[36mchunk_a_document\u001b[0m:\u001b[36m28\u001b[0m - \u001b[1mReading a document... ФАП-437.txt\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:47:14.672\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.chunking_algorithms.WordCountingChunkingAlgorithm\u001b[0m:\u001b[36mchunk_a_document\u001b[0m:\u001b[36m28\u001b[0m - \u001b[1mReading a document... ФАП-82.txt\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:47:19.178\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.embedders.Embedder\u001b[0m:\u001b[36mconvert_chunks_to_vector_index\u001b[0m:\u001b[36m147\u001b[0m - \u001b[1mConverting ChunkStorage to VectorIndex\u001b[0m\n",
+      "100%|██████████| 2586/2586 [03:28<00:00, 12.42it/s]\n",
+      "\u001b[32m2025-05-01 17:50:47.752\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mgenerate_index\u001b[0m:\u001b[36m54\u001b[0m - \u001b[1mCopy of index time: 0.25898122787475586s.\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:50:47.752\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.MirageIndex\u001b[0m:\u001b[36msave\u001b[0m:\u001b[36m32\u001b[0m - \u001b[1mSaving Mirage index to indexes\\W_128_0.1_intfloat_l2.mirage_index...\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:50:52.779\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.MirageIndex\u001b[0m:\u001b[36msave\u001b[0m:\u001b[36m78\u001b[0m - \u001b[1mMirage index saved to indexes\\W_128_0.1_intfloat_l2.mirage_index.\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:50:52.779\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.MirageIndex\u001b[0m:\u001b[36msave\u001b[0m:\u001b[36m32\u001b[0m - \u001b[1mSaving Mirage index to indexes\\W_128_0.1_intfloat_ip.mirage_index...\u001b[0m\n",
+      "\u001b[32m2025-05-01 17:50:57.775\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mmirage.index.MirageIndex\u001b[0m:\u001b[36msave\u001b[0m:\u001b[36m78\u001b[0m - \u001b[1mMirage index saved to indexes\\W_128_0.1_intfloat_ip.mirage_index.\u001b[0m\n"
      ]
     }
    ],
@@ -196,25 +199,6 @@
     "        get_name(combination)\n",
     "    )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70e57093",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'W_2048_0.1_BAAI'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
