--- a/thesis/thesis_template/thesis.tex
+++ b/thesis/thesis_template/thesis.tex
@@ -147,7 +147,7 @@
 \include{chapters/chapter4}
 \include{chapters/chapter5}
 \include{chapters/chapter6}
-
+\include{chapters/chapter7}
 
 %% REFERENCES
 \printbibliography[heading=bibintoc,title={Bibliography cited}]
