--- a/experiments/ass_burn_join.ipynb
+++ b/experiments/ass_burn_join.ipynb
@@ -12,67 +12,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "7c6461e7",
+   "execution_count": 44,
+   "id": "c4cdd505",
    "metadata": {},
    "outputs": [],
    "source": [
-    "questions = pd.read_pickle('bench-df.pkl').reset_index()"
+    "q1 = pd.read_pickle('bench-df.pkl').reset_index()\n",
+    "i1 = pd.read_pickle(r'E:\\indres\\bench1.pkl')\n",
+    "r1 = pd.read_pickle(r'E:\\results\\bench_rel.pkl')\n",
+    "r1 = r1[r1.file.str.contains('_l2')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "8d72798d",
+   "execution_count": 45,
+   "id": "e307b75c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "index_metrics = pd.read_pickle(r'E:\\indres\\bench1.pkl')"
+    "r_q1 = pd.merge(r1, q1, left_on='question', right_on='index')\n",
+    "final1 = pd.merge(r_q1, i1, on='file')\n",
+    "final1.drop(['rel_sent_y', 'index'], axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "7683ac23",
+   "execution_count": 46,
+   "id": "ac054871",
    "metadata": {},
    "outputs": [],
    "source": [
-    "retriv_result = pd.read_pickle(r'E:\\results\\bench_rel.pkl')"
+    "final1.columns = ['file', 'question_id', 'texts', 'rel_sent', 'relevance', 'cc', 'cr',\n",
+    "       'doc', 'question', 'response', 'vector_variance',\n",
+    "       'silhouette_score_euclidian', 'silhouette_score_cosine', 'EID',\n",
+    "       'redundancy', 'LOFs', 'mean_LOF', 'std_LOF']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "41fa6d81",
+   "execution_count": 47,
+   "id": "b6b16009",
    "metadata": {},
    "outputs": [],
    "source": [
-    "r_q = pd.merge(retriv_result, questions, left_on='question', right_on='index')"
+    "final1['dataset'] = 'bench'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "6c713e66",
+   "execution_count": 48,
+   "id": "fe32e190",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final = pd.merge(r_q, index_metrics, on='file')"
+    "q2 = pd.read_pickle('cuad-df.pkl').reset_index()\n",
+    "i2 = pd.read_pickle(r'E:\\indres\\bench2.pkl')\n",
+    "r2 = pd.read_pickle(r'E:\\results\\bench2_rel.pkl')\n",
+    "r2 = r2[r2.file.str.contains('_l2')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
+   "id": "3a9e64df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r_q2 = pd.merge(r2, q2, left_on='question', right_on='index')\n",
+    "final2 = pd.merge(r_q2, i2, on='file')\n",
+    "final2.drop(['rel_sent_y', 'index'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "a7f1afda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final2.columns = ['file', 'question_id', 'texts', 'rel_sent', 'relevance', 'cc', 'cr',\n",
+    "       'doc', 'question', 'response', 'vector_variance',\n",
+    "       'silhouette_score_euclidian', 'silhouette_score_cosine', 'EID',\n",
+    "       'redundancy', 'LOFs', 'mean_LOF', 'std_LOF']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "8015442b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final2['dataset'] = 'cuad'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "1bfc5394",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final = pd.concat([final1, final2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "113ccb93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final.to_pickle(r'E:\\final.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "6dd4ff38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(final.iloc[5151]).transpose().to_pickle('df_to_show.pkl')"
+    "# pd.DataFrame(final.iloc[5151]).transpose().to_pickle('df_to_show.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
+   "id": "932311ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final.to_pickle(r'E:\\final1.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "51bc7376",
    "metadata": {},
    "outputs": [],
